@@ -15,7 +15,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 """Stores per-repository settings."""
 
-from bzrlib import osutils
+from bzrlib import osutils, urlutils
 from bzrlib.config import IniBasedConfig, config_dir, ensure_config_dir_exists, GlobalConfig, LocationConfig, Config
 
 import os
@@ -193,3 +193,16 @@ class BranchConfig(Config):
     def _get_user_id(self):
         """Get the user id from the 'email' key in the current section."""
         return self._get_user_option('email')
+
+    def get_option(self, key, section=None):
+        if section == "BUILDDEB" and key == "merge":
+            revnum = self.branch.get_revnum()
+            try:
+                props = self.branch.repository.transport.get_dir(urlutils.join(self.branch.get_branch_path(revnum), "debian"), revnum)[2]
+                if props.has_key("mergeWithUpstream"):
+                    return "True"
+                else:
+                    return "False"
+            except svn.core.SubversionException:
+                return None
+        return None
